<resources>
    <string name="app_name">MoJual</string>
    <string name="general_btn_next">Next</string>
    <string name="general_btn_back">Back</string>
    <string name="general_btn_no">NO</string>
    <string name="general_btn_yes">YES</string>
    <string name="general_error">Something went wrong, please restart and try again !!</string>
    <string name="general_error_feature_disabled">this feature will coming soon !</string>
    <string name="general_error_feature_permission">you don\'t have permission to access this feature yet</string>
    <string name="general_error_validation_fill_all_field">Fill all required field !!</string>
    <string name="login_btn_login">Sign In with Phone Number</string>
    <string name="login_btn_register">Register</string>
    <string name="login_btn_forgot_password">Forgot password</string>
    <string name="login_password_phone">Phone</string>
    <string name="registration_title">Sign Up</string>
    <string name="registration_demographic">Demographic</string>
    <string name="registration_contact">Contact</string>
    <string name="registration_payment">Payment</string>
    <string name="registration_step1_selfie_tutorial">Your selfie photo, please capture front of your face.</string>
    <string name="registration_step1_full_name">Full Name</string>
    <string name="registration_step1_date_of_birth">Date of Birth</string>
    <string name="registration_step1_ktp_number">KTP Number</string>
    <string name="registration_step1_upload_ktp_photo">Upload KTP Photo</string>
    <string name="registration_step1_error_name">Invalid name</string>
    <string name="registration_step2_email">Email</string>
    <string name="registration_step2_email_optional">Email (Optional)</string>
    <string name="registration_step2_address">Address</string>
    <string name="registration_step2_kelurahan">Kelurahan</string>
    <string name="registration_step2_kecamatan">Kecamatan</string>
    <string name="registration_step2_rt_rw">RT/RW</string>
    <string name="registration_step2_city">City</string>
    <string name="registration_step2_postal_code">Postal Code</string>
    <string name="registration_step2_google_map_title">Select location on Map</string>
    <string name="registration_step2_choose_on_map">Choose on Map</string>
    <string name="registration_step2_domicile_address">DOMICILE ADDRESS</string>
    <string name="registration_step2_pickup_address">PICKUP ADDRESS</string>
    <string name="registration_step2_copy_domicle">Copy Domicile</string>
    <string name="registration_step2_button_select_location">Select Location</string>
    <string name="registration_step3_bank_name">Bank Name</string>
    <string name="registration_step3_bank_account_number">Bank account number</string>
    <string name="registration_step3_bank_account_name">Bank account name</string>
    <string name="registration_step3_bank_region">Bank region</string>
    <string name="login_password_title">Login with phone number</string>
    <string name="login_password_forgot">Forgot password?</string>
    <string name="login_password_login">Login</string>
    <string name="sign_up_password_title">Sign Up</string>
    <string name="forgot_password_title">Input new password</string>
    <string name="forgot_password_hint">Password</string>
    <string name="forgot_password_input_password_hint">Input your password</string>
    <string name="forgot_password_re_password_hint">Retype Password</string>
    <string name="forgot_password_error_length">Password must at least 6 char</string>
    <string name="forgot_password_error_not_match">Confirm password not match</string>
    <string name="home_verify_warning">Your account is in verify process. MOJUAL team will contact you soon</string>
    <string name="home_verify_rejected">Your account is REJECTED. Please contact MOJUAL team for detail</string>
    <string name="home_verify_blocked">Your account is DISABLE. Please contact MOJUAL team for detail</string>
    <string name="home_navigation_home">Home</string>
    <string name="home_navigation_inbox">Inbox</string>
    <string name="home_navigation_history">History</string>
    <string name="home_menu_sell_now">Sell</string>
    <string name="home_menu_check_quality">Check Quality</string>
    <string name="home_menu_borrow">Borrow</string>
    <string name="home_menu_tips">Tips</string>
    <string name="home_bonus">Bonus</string>
    <string name="home_rating">Rating</string>
    <string name="sale_button_submit">SUBMIT</string>
    <string name="sale_estimated_price">Estimate Order Amount</string>
    <string name="sale_quantity">Select Quantity</string>
    <string name="sale_container_type">Select container type</string>
    <string name="sale_selected_date">Select Date</string>
    <string name="sale_select_title">Select date to sell and the quantity</string>
    <string name="sale_select_quantity_title">Tab to select quantity</string>
    <string name="sale_select_future_date_title">Tab to select date to sell</string>
    <string name="sale_select_future_date_date">Date</string>
    <string name="sale_select_future_date_price">Price per kg</string>
    <string name="sale_select_future_date_price_kg">%1$s</string>
    <string name="sale_select_future_date_today">Now</string>
    <string name="sale_asset_empty">Can\'t find list asset!!, try later</string>
    <string name="sale_asset_empty_button">Kembali ke beranda</string>
    <string name="sale_detail_title_id">ID</string>
    <string name="sale_detail_title_date">Date</string>
    <string name="sale_detail_title_price">Price</string>
    <string name="sale_detail_title_quantity">Quantity</string>
    <string name="sale_detail_title_total_price">Total Price</string>
    <string name="sale_detail_submit">CREATE NEW ORDER</string>
    <string name="sale_detail_container">%1$s Container</string>
    <string name="sale_detail_containers">%1$s Containers</string>
    <string name="month_year_picker_date">Date</string>
    <string name="month_year_picker_month">Month</string>
    <string name="month_year_picker_year">Year</string>
    <string name="month_year_picker_select_btn">SELECT</string>
    <string name="quality_check_error_select_order">You have selected at least 1 order !!</string>
    <string name="quality_add_container_title">Check Quality</string>
    <string name="check_quality_add_new_order">CREATE MORE ORDER</string>
    <string name="check_quality_add_container_title">#%1$s</string>
    <string name="check_quality_add_container_order">Order %1$s</string>
    <string name="check_quality_add_container_btn_check">Start checking</string>
    <string name="check_quality_add_container_btn_cancel">Cancel checking</string>
    <string name="check_quality_add_container_add_new_container">ADD %1$s OF %2$s CONTAINER</string>
    <string name="check_quality_add_container_add_new_containers">ADD %1$s OF %2$s CONTAINERS</string>
    <string name="check_quality_add_container_turn_off_iot">Please turn of IoT device first to save Device battery</string>
    <string name="check_quality_tip1">Dont know how to check?</string>
    <string name="check_quality_tip2">See Tips</string>
    <string name="check_quality_add_container_iot">IOT status:</string>
    <string name="check_quality_add_container_iot_connected">Connected</string>
    <string name="check_quality_add_container_iot_not_connect">Not connect</string>
    <string name="check_quality_add_container_iot_connecting">Connecting...</string>
    <string name="check_quality_add_container_iot_not_turn_off">Turn off</string>
    <string name="check_quality_add_container_button_retry">RETRY</string>
    <string name="check_quality_add_container_button_manual">MANUAL</string>
    <string name="check_quality_add_container_gps_warning">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="check_quality_add_container_permission_warning">Please provide required permission</string>
    <string name="check_quality_add_container_no_available_container">You don\'t have any available containers !!</string>
    <string name="check_quality_add_container_block_while_checking">Please wait checking complete or cancel current checking to add more !!</string>
    <string name="check_quality_add_container_max_order_not_allowed">Number of container cannot exceed %1$s. Please update and try again</string>
    <string name="check_quality_add_container_item_id">ID</string>
    <string name="check_quality_add_container_weight_title">Weight (KG)</string>
    <string name="check_quality_add_container_time_title">Timer (Seconds)</string>
    <string name="order_detail_title">Confirmation</string>
    <string name="order_detail_hint">Your order are checked. Please choose what container to sell.</string>
    <string name="order_detail_button_submit">APPROVE</string>
    <string name="order_detail_button_reject">REJECT</string>
    <string name="order_detail_total_amount">Total Amount</string>
    <string name="order_detail_delivery_bonus">Award - Delivery</string>
    <string name="order_detail_product_amount">Product Amount</string>
    <string name="order_detail_release_bonus">Release Bonus</string>
    <string name="order_detail_additional_award">Additional Award</string>
    <string name="order_detail_point">Points</string>
    <string name="order_detail_volume_bonus">Award - Volume</string>
    <string name="order_detail_order_id">Order ID</string>
    <string name="order_detail_weight">Weight</string>
    <string name="order_detail_price">Price</string>
    <string name="order_detail_amount">Amount</string>
    <string name="order_detail_content">Eugenol Content</string>
    <string name="order_detail_dialog_reject">Are you sure to reject all container?</string>
    <string name="order_detail_dialog_confirm">Are you sure to sell container %1$s?</string>
    <string name="order_detail_button_approve">APPROVE</string>
    <string name="order_detail_button_upload">UPLOAD DOCUMENT</string>
    <string name="order_detail_status">Status</string>
    <string name="order_detail_message">Message</string>
    <string name="order_detail_description">Description</string>
    <string name="order_detail_dialog_delete">Are you sure to delete document?</string>
    <string name="order_detail_select_container_type">Please select container type before select quantity</string>
    <string name="order_reject_title">Let Us Know</string>
    <string name="order_reject_detail">Why do you reject? let us know by answer some questions below</string>
    <string name="order_reject_quest_1">Price of raw material (leafs)?</string>
    <string name="order_reject_quest_2">How much is your production yield?</string>
    <string name="order_reject_buttom_confirm">CONFIRM TO REJECT</string>
    <string name="history_title">History</string>
    <string name="history_filter">FILTER BY</string>
    <string name="history_container">%1$s Container</string>
    <string name="history_containers">%1$s Containers</string>
    <string name="history_search_title">Advanced Search</string>
    <string name="message_title">Notification</string>
    <string name="message_today">Today</string>
    <string name="message_yesterday">Yesterday</string>
    <string name="bank_update_title">Update Bank</string>
    <string name="profile_button_logout">LOG OUT</string>
    <string name="reject_hint_your_answer">Your answer</string>
    <string name="bank_update_button_update">UPDATE</string>
    <string name="bank_confirm_notice">Money will be transfered to your account. Please confirm your bank account information.</string>
    <string name="bank_confirm_button_confirm">CONFIRM</string>
    <string name="bank_confirm_bank_name">Bank name:</string>
    <string name="bank_confirm_bank_acc_number">Bank account number:</string>
    <string name="bank_confirm_bank_acc_name">Bank account name:</string>
    <string name="bank_confirm_bank_region">Bank region:</string>
</resources>