<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.tebet.mojual.common.util.DateExtKt" />

        <import type="com.tebet.mojual.common.util.StringExtKt" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.tebet.mojual.view.qualitydetail.OrderDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingRight="@dimen/_20sdp">

        <com.tebet.mojual.common.view.AppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.order.note}"
            android:textColor="@color/red_btn_dialog"
            android:visibility="@{viewModel.order.note != null ? View.VISIBLE : View.GONE}"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_order_id" />

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewModel.order.orderCode}"
                android:textColor="@color/dark_green"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Status" />

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@{!viewModel.order.isRejected ? @color/dark_green : @color/red_btn_dialog}"
                android:text="@{viewModel.order.status}"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_total_amount" />

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{StringExtKt.toDisplayMoney(viewModel.order.totalPrice)}"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_delivery_bonus"
                 />

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{StringExtKt.toDisplayMoney(viewModel.order.deliveryBonus)}"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_volume_bonus"
                 />

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{StringExtKt.toDisplayMoney(viewModel.order.bonus)}"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Message"
                 />

            <com.tebet.mojual.common.view.AppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewModel.order.note}"
                android:textColor="@color/red_btn_dialog"
                android:textStyle="bold" />
        </LinearLayout>

        <com.tebet.mojual.common.view.AppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.order.canAction ? View.VISIBLE : View.GONE}"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/order_detail_hint"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_8sdp"
            app:itemBinding="@{viewModel.itemBinding}"
            app:items="@{viewModel.items}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="@{viewModel.order.canAction ? View.VISIBLE : View.GONE}">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:enabled="@{!viewModel.isLoading}"
                android:onClick="@{()-> viewModel.onRejectClick()}"
                android:text="@string/order_detail_button_reject"
                android:textColor="@color/red_btn_dialog" />

            <com.tebet.mojual.common.view.AppButtonRounded
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:enabled="@{!viewModel.isLoading &amp;&amp; viewModel.items.size() > 0}"
                android:onClick="@{()-> viewModel.onSubmitClick()}"
                android:text="@string/sale_button_submit" />
        </LinearLayout>
    </LinearLayout>
</layout>
